# stage_ros

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  readme.md
cfg/: StageRos.cfg
cmake/: StageConfig.cmake
launch/: world.launch
msg/: Marker.msg  MarkerDetection.msg  MarkerStamped.msg  MarkerWithCovariance.msg  MarkerWithCovarianceStamped.msg  Markers.msg
scripts/: rosparam_instantiate.py
src/: stageros.cpp  stageros.cpp.orig
test/: cmdpose_tests.py  intensity_test.py
world/: cave-fiducial.world  cave.world  cave_multi.world  fiducial.world  line.world  willow-erratic.world  willow-four-erratics-multisensor.world  willow-four-erratics.world
world/include/: hokuyolaser.inc  pioneer2dx.inc  qrcode.inc
