<?xml version="1.0"?>
<package format="2">
  <name>stage_ros</name>
  <version>1.8.0</version>
  <description>This package provides ROS specific hooks for stage</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/stage_ros</url>
  <url type="repository">https://github.com/ros-simulation/stage_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/stage_ros/issues</url>

  <author email="gerky@osrfoundation.org">Brian Gerky</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>

  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>stage</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
</package>
